--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@ API_PREFIX=/api
 DEBUG=True
 
 ALLOWED_ORIGINS= ["http://localhost:3000", "http://localhost:5173"]
-GEMINI_API_KEY =AIzaSyDe2N5djkn43nuszWIcraqRRBAWJxo9rcU
+GEMINI_API_KEY =
 
