--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi[all]>=0.116.1",
+    "google-generativeai>=0.8.5",
     "langchain>=0.3.27",
     "langchain-openai>=0.3.28",
     "psycopg2-binary>=2.9.10",
